frontend/app/globals.css
@import "tailwindcss";
@import "tw-animate-css";
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');


@custom-variant dark (&:is(.dark *));

@theme inline {
  --color-background: #f9fbff;
  --color-primarytext: #f9fbff;
  --color-primary: #8bd4c5;
  --color-secondary: #996bf6;
  --color-tertiary: #8bd4c5;
  --font-sans: "Noto Sans", sans-serif;
  --color-newGray: #ced4e3;
}

.dark {
  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
}

h1 {
  @apply text-5xl font-bold leading-50;
}

h2 {
  @apply text-3xl font-bold leading-15;
}

.colored-buttonPurple {
  @apply bg-white border border-gray-200 rounded-lg px-3 py-4 shadow-sm focus-within:shadow-md focus-within:shadow-secondary/80 focus-within:border-secondary focus-within:border;
}

.colored-buttonPurple:focus-within .search-icon {
  @apply text-secondary;
}

.colored-buttonGreen {
  @apply bg-white border border-gray-200 rounded-lg px-3 py-4 shadow-sm focus-within:shadow-md focus-within:shadow-tertiary/80 focus-within:border-tertiary focus-within:border;
}

.colored-buttonGreen:focus-within .search-icon {
  @apply text-tertiary;
}

.card {
  @apply bg-white rounded-lg p-4 shadow-md min-w-[500px] border-gray-500/20 border;
}

@layer base {
  * {
    @apply p-0;
  }
  body {
    @apply bg-background text-black font-sans my-10;
  }
}

/* Custom scrollbar for cards-container */
.cards-container {
  scrollbar-width: thin;              /* Firefox */
  scrollbar-color: #d1d5db #f3f4f6;   /* Firefox */
  position: relative;
}

.cards-container::-webkit-scrollbar {
  height: 16px; /* Área total da barra */
  background: transparent;
}

.cards-container::-webkit-scrollbar-track {
  background: transparent;
}

.cards-container::-webkit-scrollbar-thumb {
  background: #d1d5db;
  border-radius: 8px;
  height: 4px;
  margin-top: 6px;
  margin-bottom: 6px;
  /* O margin não funciona em todos navegadores, mas ajuda a centralizar em alguns */
}

.cards-container::after {
  content: '';
  position: absolute;
  left: 0; right: 0; bottom: 0;
  height: 4px;
  background: #f3f4f6;
  border-radius: 8px;
  z-index: 1;
  pointer-events: none;
}

